[metadata]
name = test-package
author = Francisca Contreras
author_email = franciscontreras@alumnos.uai.cl
version = 0.1.1
description = testing packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/easy_outlook
license_files = LICENSE
keywords = testeo
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    = src
packages=find:
python_requires = >=3.10
install_requires =
    numpy
    scipy

[options.packages.find]
where=src
exclude =
    tests